# shamazon_robot

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml  shamazon_robot.rviz
config/: base_global_planner.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  shamazon_envn.yaml  shamazon_robot.yaml  teb_local_planner_params.yaml
docs/doxygen/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  graph_legend.html  index.html  shamazon__robot_8cpp.html  shamazon__robot_8cpp__incl.map  shamazon__robot_8cpp__incl.md5
docs/doxygen/html/search/: all_0.js
docs/doxygen/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex  shamazon__robot_8cpp.tex  shamazon__robot_8cpp__incl.md5
include/: elevator.hpp  navigation.hpp  user_interface.hpp
include/nav_goals/: nav_goals.h
launch/: gazebo.launch  navigation.launch
maps/: map_0.1.yaml
maps/floor_0/: floor_0.yaml  localization.yaml  routes.yaml
maps/floor_1/: floor_1.yaml
maps/floor_2/: floor_2.yaml
models/conveyor/: model.sdf
results/: cppcheck_result.txt  cpplint_result.txt
src/: main.cpp  nav_goals.cpp  shamazon_robot.cpp  talker.cpp
test/: shamazon_test.cpp  shamazon_test.test  srv_test.cpp  srv_test.test
urdf/: robot.gv  shamazon_robot.xacro  ydlidar.urdf
worlds/: warehouse.world
